muted & align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2211,19 +2211,20 @@ Works CSS
 
 .toggle-sound {
   position: fixed;
-  bottom: 12vh;
-	left: calc(50% + 60px);
-	background-color: #ffffff;
-	width: 55px;
-	height: 55px;
+  bottom: 114px;
+  left: 55%;
+  transform: translateX(-50%);
+  background-color: #ffffff;
+  width: 55px;
+  height: 55px;
   line-height: 55px;
   text-align: center;
   color: black;
-	border-radius: 50%;
-	cursor: pointer;
-	z-index: 99;
-	animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-	box-shadow: 0 0 0 0 #F06292;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 99;
+  animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  box-shadow: 0 0 0 0 #F06292;
 }
 
 .toggle-sound.sound-mute {
@@ -2314,6 +2315,12 @@ Works CSS
   }
 }
 
+@media screen and (min-width: 1440px) { 
+  .toggle-sound {
+    left: 53%;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .vision img {
     display: none;
@@ -2323,11 +2330,19 @@ Works CSS
     display: block !important;
     margin: auto;
   }
+  .toggle-sound {
+    left: 57%;
+  }
+  
 }
 
 @media screen and (max-width: 768px) {
   .single-works {
     flex-basis: 45% !important;
+  }
+
+  .toggle-sound {
+    left: 57%;
   }
 }
 
@@ -2337,5 +2352,9 @@ Works CSS
   }
   .vemo-videos {
     object-fit: cover;
+  }
+
+  .toggle-sound {
+    left: 62%;
   }
 }
